--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -77,7 +77,7 @@
         "Title": "Miel de hierbas",
         "PHerbalHoney": "Hay diferentes tipos de miel, que se diferencian según la flor de la que las abejas recogieron el polen, hay miel de flores, miel de trébol, miel de cítricos, y aquí estamos hablando de la miel de hierbas. La miel de hierbas es uno de los tipos de miel más puros por su rico contenido en vitaminas y minerales, así como en antioxidantes, que son la primera fortaleza del cuerpo humano contra muchas enfermedades, la más importante de las cuales es el cáncer. La miel de hierbas, como otros tipos de miel, contiene también un alto porcentaje de azúcar, proteínas, hierro y calcio, y hay muchos tipos de miel de hierbas, como la miel de clavo, de hierbas silvestres y de rosa silvestre, y hay ligeras diferencias de sabor entre un tipo y otro. La miel de hierbas es riquísima",
         "TitleBenifit": " Beneficios de la miel de hierbas ",
-        "DescripciónBenifit": "La miel de hierbas tiene muchos beneficios para la salud y el cuerpo humano, quizás más que otros tipos de miel.",
+        "DescriptionBenifit": "La miel de hierbas tiene muchos beneficios para la salud y el cuerpo humano, quizás más que otros tipos de miel.",
         "Benifit1": "La miel de hierbas es rica en un gran porcentaje de antibióticos naturales, que protegen al organismo de diversas enfermedades.",
         "Benifit2": "Ayuda a aliviar el dolor de muelas y las infecciones de las encías.",
         "Benifit3": "La miel a base de plantas es rica en un gran porcentaje de antibióticos naturales que protegen al organismo de diversas enfermedades.",
