--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -98,7 +98,8 @@
         "TitleCours": "دورات تربية النحل التي تقدمها شخصيات بارزة في هذا القطاع",
         "TitleTeam": "تعلّم من خبراء رائدين في المجال",
         "DescriptionCours": "هذه هي مجموعتنا المختارة من دورات تربية النحل، التي يقدمها أفضل المحترفين في تربية النحل مثل فولانيتو XXXXXXXXXX أو منجانيتو XXXXXXXXXX وغيرهم. نحن نقدم مجموعة من الدورات التدريبية للأشخاص الذين يرغبون في البدء كمربي نحل بالإضافة إلى دورات متخصصة لمربي النحل المحترفين، وهو مشروع تدريبي خاص بنا.",
-        "Other_Courses": "دورات أخرى"
+        "Other_Courses": "دورات أخرى",
+        "Lunch": "تشمل وجبة الغداء في اليوم الأول"
     },
     "Material": {
         "Title": "المواد التي تهمك"
