--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -98,7 +98,8 @@
         "TitleCours": "Beekeeping courses given by leading figures in the sector",
         "TitleTeam": "Learn from leading industry experts",
         "DescriptionCours": "This is our selection of beekeeping courses, given by the best professionals in beekeeping such as FolanitoXXXXXXX or menganitoXXXXXXX among others. We offer a range of training for people who want to start as beekeepers as well as specialised courses for professional beekeepers, a training project of our XXXXXXXXXXXX.",
-        "Other_Courses": "Other Courses"
+        "Other_Courses": "Other Courses",
+        "Lunch": "INCLUDES LUNCH ON THE FIRST DAY"
     },
     "Material": {
         "Title": "Materials of your interest"
