--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -98,7 +98,8 @@
         "TitleCours": "Cours d'apiculture dispensés par des personnalités du secteur",
         "TitleTeam": "Apprendre auprès d'experts du secteur",
         "DescriptionCours": "Voici notre sélection de cours d'apiculture, dispensés par les meilleurs professionnels de l'apiculture tels que FolanitoXXXXX ou menganitoXXXXX entre autres. Nous proposons une gamme de formations pour les personnes qui souhaitent se lancer dans l'apiculture ainsi que des cours spécialisés pour les apiculteurs professionnels, un projet de formation de notre XXXXXXXXXXXX.",
-        "Other_Courses": "Autres cours"
+        "Other_Courses": "Autres cours",
+        "Lunch": "INCLUYE LA COMIDA DEL PRIMER DÍA"
     },
     "Material": {
         "Title": "Matériel d'intérêt"
