--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -98,7 +98,8 @@
         "TitleCours": "Cursos de Apicultura impartidos por referentes del sector",
         "TitleTeam": "Aprende de la mano de referentes del sector",
         "DescriptionCours": "Esta es nuestra selección de cursos de apicultura, impartidos por los mejores profesionales en apicultura como FolanitoXXXXX o menganitoXXXXX entre otros. Ofrecemos una gama de formación para personas que pretenden iniciarse como apicultores así como cursos de especialización para apicultores profesionales.Es un proyecto formativo de nuestra XXXXXXXX.",
-        "Other_Courses": "Otros cursos"
+        "Other_Courses": "Otros cursos",
+        "Lunch": "INCLUYE LA COMIDA DEL PRIMER DÍA"
     },
     "Material": {
         "Title": "Materiales de tu interes"
