--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -41,6 +41,7 @@
     "See_Our_Products": "انظر منتجاتنا",
     "Previous": "السابق",
     "Search": "البحث",
+    "Date": "تاريخ",
     "Titles": {
         "Heart_Of_Nature": "من قلب الطبيعة"
     },
@@ -99,7 +100,16 @@
         "TitleTeam": "تعلّم من خبراء رائدين في المجال",
         "DescriptionCours": "هذه هي مجموعتنا المختارة من دورات تربية النحل، التي يقدمها أفضل المحترفين في تربية النحل مثل فولانيتو XXXXXXXXXX أو منجانيتو XXXXXXXXXX وغيرهم. نحن نقدم مجموعة من الدورات التدريبية للأشخاص الذين يرغبون في البدء كمربي نحل بالإضافة إلى دورات متخصصة لمربي النحل المحترفين، وهو مشروع تدريبي خاص بنا.",
         "Other_Courses": "دورات أخرى",
-        "Lunch": "تشمل وجبة الغداء في اليوم الأول"
+        "Lunch": "تشمل وجبة الغداء في اليوم الأول",
+        "Lunch_Break": "سنتوقف في الظهيرة لتناول الغداء معاً.",
+        "Course_Data": "تفاصيل الدورة",
+        "First_Day": "اليوم الاول",
+        "Second_Day": "اليوم الثاني",
+        "BookCourse": "احجز دورة",
+        "Program": "البرنامج",
+        "ShowLess":"أظهر أقل",
+        "ShowMore":"اعرض المزيد",
+        "ImportantInformation":"معلومات هامة"
     },
     "Material": {
         "Title": "المواد التي تهمك"
