--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -112,7 +112,8 @@
         "ImportantInformation":"Information importante"
     },
     "Material": {
-        "Title": "Matériel d'intérêt"
+        "Title": "Matériel d'intérêt",
+        "Pollen":"Pollen"
     },
     "Blog": {
         "Title": "Blog"
