--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -94,7 +94,7 @@
         "Title": ""
     },
     "Cours": {
-        "Title": "Coursos",
+        "Title": "Cursos",
         "TitleCours1": "Curso Miel, Polen, Propóleos, Jalea Y Cera",
         "TitleCours": "Cursos de Apicultura impartidos por referentes del sector",
         "TitleTeam": "Aprende de la mano de referentes del sector",
